# memo-shop

./: .env.example  .gitignore  .gitmodules  DOCKER_SETUP.md  MINIO_BUCKET_PUBLIC_SETUP.md  Makefile  RTC_RTM_实现逻辑教程.md  databse.md  demo视频说明.md  docker-compose.dev.yml  docker-compose.yml  readme.md  zeabur.yml  完整提交清单.md  架构设计文档.md  运行说明文档.md  项目说明文档.md
agent/: .env.example  Dockerfile  ROLE_PLAY_IMPLEMENTATION.md  main.py  nodes.py  postcard_flow.py  pyproject.toml  requirements.txt  test_voice_generation.py
agent/utils/: __init__.py  call_llm.py  database.py  message_processor.py  minio_client.py  mq_client.py  prompts.py  role_manager.py  voice_generator.py
agent/voice/: __init__.py  fish.py
backend/: .dockerignore  .env.example  Dockerfile  Makefile  go.mod  go.sum  main.go  text
backend/config/: config.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/internal/database/: database.go
backend/internal/handlers/: character_handler.go  postcard_handler.go  upload_handler.go  user_handler.go
backend/internal/middleware/: auth.go  middleware.go
backend/internal/models/: character.go  postcard.go  response.go  user.go
backend/internal/routes/: routes.go
backend/internal/services/: ai_service.go  (+6 more)
design/: databse.md
fronted/: .env  .env.example  DESIGN_SYSTEM.md  Dockerfile  NAVIGATION-SETUP.md  PROJECT_STATUS.md  README_MEMO_SHOP.md  SETUP_GUIDE.md  package.json  pnpm-lock.yaml  tailwind.config.js
fronted/src/: middleware.tsx
init-scripts/: 01-init.sql
scripts/: health-check.sh  quick-start.sh  setup-minio-permissions.sh
(+69 files in other folders)
